@@ -1,3 +1,7 @@
+2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* datrie/*.h, datrie/*.c: Add license header to every source file.
+
 2010-02-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Move documentation from *.h to *.c, so libdatrie developers have the
